<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/specie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/species" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:visibility="gone"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:text="@string/species_unavailable" />

    <include
        android:id="@+id/specie_loading_view"
        layout="@layout/detail_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp" />

    <com.ezike.tobenna.starwarssearch.character_search.views.EmptyStateView
        android:id="@+id/specie_error_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:isButtonVisible="true"
        android:layout_margin="16dp"
        android:visibility="gone"
        app:emptyStateTitleText="@string/specie_error_occurred" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/specie_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="4"
        tools:listitem="@layout/item_specie" />

</LinearLayout>
