<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/film_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:layout_marginHorizontal="26dp"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:text="@string/films" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:layout_marginHorizontal="26dp"
        android:textStyle="bold"
        android:visibility="gone"
        android:layout_marginStart="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        android:text="@string/films_unavailable" />

    <include
        android:id="@+id/film_loading_view"
        layout="@layout/detail_loading_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="26dp"/>

    <com.ezike.tobenna.starwarssearch.character_search.views.EmptyStateView
        android:id="@+id/film_error_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:isButtonVisible="true"
        android:layout_margin="32dp"
        android:visibility="gone"
        app:emptyStateTitleText="@string/film_error_occurred" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/film_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="24dp"
        android:paddingHorizontal="16dp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="horizontal"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_divider"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:itemCount="4"
        tools:listitem="@layout/item_film" />

</LinearLayout>
