<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchFragment">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/search_bar_horizontal_margin"
        android:background="@drawable/search_bar_bg"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="@dimen/search_bar_drawable_padding"
        android:hint="@string/search"
        android:padding="@dimen/search_bar_padding"
        android:textColor="#8E8E93"
        android:textSize="@dimen/search_bar_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:inputType="text"
        android:autofillHints="@string/search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/characters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/rv_margin_top"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/rv_margin_top"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <TextView
        android:id="@+id/clear_history"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:text="@string/clear_search_history"
        android:layout_marginTop="@dimen/clear_history_top_margin"
        android:layout_marginHorizontal="@dimen/clear_history_horizontal_margin"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_history" />

    <TextView
        android:id="@+id/search_history_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_history_empty_text"
        android:layout_marginHorizontal="@dimen/clear_history_horizontal_margin"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>
